modified ArXiv citation problem

--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -15,6 +15,7 @@
   author = {Cordier, Martin and \textbf{Schemmer}, \textbf{Max} and Schneeweiss, Philipp and Volz, J{\"u}rgen and Rauschenbeutel, Arno},
   year = {2022},
   month = dec,
+  journal = {arXiv},
   number = {arXiv:2212.09592},
   eprint = {arXiv:2212.09592},
   publisher = {{arXiv}},
@@ -27,6 +28,7 @@
   author = {Kusmierek, Kasper and Mahmoodian, Sahand and Cordier, Martin and Hinney, Jakob and Rauschenbeutel, Arno and \textbf{Schemmer}, \textbf{Max} and Schneeweiss, Philipp and Volz, J{\"u}rgen and Hammerer, Klemens},
   year = {2022},
   month = jul,
+  journal = {arXiv},
   number = {arXiv:2207.10439},
   eprint = {2207.10439},
   eprinttype = {arxiv},
@@ -39,6 +41,7 @@
   year = {2022},
   month = sep,
   number = {arXiv:2209.02547},
+  journal = {arXiv},
   eprint = {2209.02547},
   eprinttype = {arxiv},
 }
