--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "'\\n\"proceeding\": {\\n        \"file\" : \"proceedings.bib\",\\n        \"venuekey\": \"booktitle\",\\n        \"venue-pretext\": \"In the proceedings of \",\\n        \"collection\" : {\"name\":\"publications\",\\n                        \"permalink\":\"/publication/\"}\\n        \\n    },\\n    \\n'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -106,9 +106,9 @@
      "output_type": "stream",
      "text": [
       "SUCESSFULLY PARSED hinney_unraveling_2021: \" Unraveling {{Two}}-{{Photon Entanglement}} via the {{Squeezi ... \"\n",
-      "WARNING Missing Expected Field 'journal' from entry cordierTailoringPhotonStatistics2022a: \" Tailoring Photon Statistics wi ... \"\n",
-      "WARNING Missing Expected Field 'journal' from entry kusmierekHigherorderMeanfieldTheory2022: \" Higher-Order Mean-Field Theory ... \"\n",
-      "WARNING Missing Expected Field 'journal' from entry mastersWillSingleTwolevel2022: \" Will a Single Two-Level Atom S ... \"\n",
+      "SUCESSFULLY PARSED cordierTailoringPhotonStatistics2022a: \" Tailoring Photon Statistics with an Atom-Based Two-Photon In ... \"\n",
+      "SUCESSFULLY PARSED kusmierekHigherorderMeanfieldTheory2022: \" Higher-Order Mean-Field Theory of Chiral Waveguide {{QED}}  \"\n",
+      "SUCESSFULLY PARSED mastersWillSingleTwolevel2022: \" Will a Single Two-Level Atom Simultaneously Scatter Two Phot ... \"\n",
       "SUCESSFULLY PARSED bouchoule_asymptotic_2020: \" Asymptotic Temperature of a Lossy Condensate  \"\n",
       "SUCESSFULLY PARSED bouchoule_cooling_2018: \" Cooling Phonon Modes of a {{Bose}} Condensate with Uniform F ... \"\n",
       "SUCESSFULLY PARSED schemmer_generalized_2019: \" Generalized {{Hydrodynamics}} on an {{Atom Chip}}  \"\n",
@@ -215,7 +215,7 @@
     "            if url:\n",
     "                md += \"\\n[Access paper here](\" + b[\"url\"] + \"){:target=\\\"_blank\\\"}\\n\" \n",
     "            else:\n",
-    "                md += \"\\nUse [Google Scholar](https://scholar.google.com/scholar?q=\"+html.escape(clean_title.replace(\"-\",\"+\"))+\"){:target=\\\"_blank\\\"} for full citation\"\n",
+    "                md += \"\\n[Google Scholar](https://scholar.google.com/scholar?q=\"+html.escape(clean_title.replace(\"-\",\"+\"))+\"){:target=\\\"_blank\\\"}\"#for full citation\"\n",
     "\n",
     "            md_filename = os.path.basename(md_filename)\n",
     "\n",
