--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -77,7 +77,8 @@
 @article{schemmer_generalized_2019,
   title = {Generalized {{Hydrodynamics}} on an {{Atom Chip}}},
   author = { *Schemmer*,  M. and Bouchoule, I. and Doyon, B. and Dubail, J.},
-  year = {2019, *Featured in: Physics, Editors' suggestion, Physics Today \& Journal Club for Condensed Matter Physics*},
+  year = {2019},
+  note = {*Featured in: Physics, Editors' suggestion, Physics Today \& Journal Club for Condensed Matter Physics*},
   month = {mar},
   volume = {122},
   pages = {090601, },
