--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -213,7 +213,7 @@
     "                md += \"\\n\" + html_escape(b[\"note\"]) + \"\\n\"\n",
     "\n",
     "            if url:\n",
-    "                md += \"\\n[Access paper here](\" + b[\"url\"] + \"){:target=\\\"_blank\\\"}\\n\" \n",
+    "                md += \"\\n[Access paper here](\" + b[\"url\"] + \"){:target=\\\"_blank\\\"}\" \n",
     "            else:\n",
     "                md += \"\\nLink: [Google Scholar](https://scholar.google.com/scholar?q=\"+html.escape(clean_title.replace(\"-\",\"+\"))+\"){:target=\\\"_blank\\\"}\"#for full citation\"\n",
     "\n",
