--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -78,11 +78,11 @@
   title = {Generalized {{Hydrodynamics}} on an {{Atom Chip}}},
   author = { *Schemmer*,  M. and Bouchoule, I. and Doyon, B. and Dubail, J.},
   year = {2019},
-  note = {*Featured in: Physics, Editors' suggestion, Physics Today \& Journal Club for Condensed Matter Physics*},
   month = {mar},
   volume = {122},
   pages = {090601, },
   journal = {Physical Review Letters},
+  note = {Featured in: Physics, Editors' suggestion, Physics Today \& Journal Club for Condensed Matter Physics},
   number = {9}
 }
 
