--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -1,6 +1,6 @@
 @article{hinney_unraveling_2021,
   title = {Unraveling {{Two}}-{{Photon Entanglement}} via the {{Squeezing Spectrum}} of {{Light Traveling}} through {{Nanofiber}}-{{Coupled Atoms}}},
-  author = {Hinney, Jakob and Prasad, Adarsh S. and Mahmoodian, Sahand and Hammerer, Klemens and Rauschenbeutel, Arno and Schneeweiss, Philipp and Volz, Jürgen and <strong>Schemmer</strong>, Max},
+  author = {Hinney, Jakob and Prasad, Adarsh S. and Mahmoodian, Sahand and Hammerer, Klemens and Rauschenbeutel, Arno and Schneeweiss, Philipp and Volz, Jürgen and <strong>Schemmer</strong>, <strong>Max></strong>},
   year = {2021},
   month = sep,
   journal = {Physical Review Letters},
@@ -12,7 +12,7 @@
 
 @misc{cordierTailoringPhotonStatistics2022a,
   title = {Tailoring Photon Statistics with an Atom-Based Two-Photon Interferometer},
-  author = {Cordier, Martin and <strong>Schemmer</strong>, Max and Schneeweiss, Philipp and Volz, Jürgen and Rauschenbeutel, Arno},
+  author = {Cordier, Martin and <strong>Schemmer</strong>, <strong>Max></strong> and Schneeweiss, Philipp and Volz, Jürgen and Rauschenbeutel, Arno},
   year = {2022},
   month = dec,
   number = {arXiv:2212.09592},
@@ -25,7 +25,7 @@
 
 @misc{kusmierekHigherorderMeanfieldTheory2022,
   title = {Higher-Order Mean-Field Theory of Chiral Waveguide {{QED}}},
-  author = {Kusmierek, Kasper and Mahmoodian, Sahand and Cordier, Martin and Hinney, Jakob and Rauschenbeutel, Arno and <strong>Schemmer</strong>, Max and Schneeweiss, Philipp and Volz, Jürgen and Hammerer, Klemens},
+  author = {Kusmierek, Kasper and Mahmoodian, Sahand and Cordier, Martin and Hinney, Jakob and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max></strong> and Schneeweiss, Philipp and Volz, Jürgen and Hammerer, Klemens},
   year = {2022},
   month = jul,
   number = {arXiv:2207.10439},
@@ -37,7 +37,7 @@
 
 @misc{mastersWillSingleTwolevel2022,
   title = {Will a Single Two-Level Atom Simultaneously Scatter Two Photons?},
-  author = {Masters, Luke and Hu, Xinxin and Cordier, Martin and Maron, Gabriele and Pache, Lucas and Rauschenbeutel, Arno and <strong>Schemmer</strong>, Max and Volz, Jürgen},
+  author = {Masters, Luke and Hu, Xinxin and Cordier, Martin and Maron, Gabriele and Pache, Lucas and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max></strong> and Volz, Jürgen},
   year = {2022},
   month = sep,
   number = {arXiv:2209.02547},
@@ -50,7 +50,7 @@
 
 @article{bouchoule_asymptotic_2020,
   title = {Asymptotic Temperature of a Lossy Condensate},
-  author = {Bouchoule, Isabelle and <strong>Schemmer</strong>,  Max},
+  author = {Bouchoule, Isabelle and <strong>Schemmer</strong>,  <strong>Max></strong>},
   year = {2020},
   month = apr,
   volume = {8},
@@ -61,7 +61,7 @@
 
 @article{bouchoule_cooling_2018,
   title = {Cooling Phonon Modes of a {{Bose}} Condensate with Uniform Few Body Losses},
-  author = {Bouchoule, Isabelle and  <strong>Schemmer</strong>,  Max and Henkel, Carsten},
+  author = {Bouchoule, Isabelle and  <strong>Schemmer</strong>,  <strong>Max></strong> and Henkel, Carsten},
   year = {2018},
   month = nov,
   volume = {5},
@@ -76,7 +76,7 @@
 
 @article{schemmer_generalized_2019,
   title = {Generalized {{Hydrodynamics}} on an {{Atom Chip}}},
-  author = { <strong>Schemmer</strong>,  M. and Bouchoule, I. and Doyon, B. and Dubail, J.},
+  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle and Doyon, Benjamin and Dubail, Jérôme},
   year = {2019},
   month = {mar},
   volume = {122},
@@ -91,7 +91,7 @@
 
 @article{schemmer_cooling_2018,
   title = {Cooling a {{Bose Gas}} by {{Three}}-{{Body Losses}}},
-  author = { <strong>Schemmer</strong>,  Max and Bouchoule, Isabelle},
+  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle},
   year = {2018},
   month = nov,
   volume = {121},
@@ -105,7 +105,7 @@
 
 @article{schemmer_monitoring_2018,
   title = {Monitoring Squeezed Collective Modes of a One-Dimensional {{Bose}} Gas after an Interaction Quench Using Density-Ripple Analysis},
-  author = { <strong>Schemmer</strong>,  Max and Johnson, Aisling and Bouchoule, Isabelle},
+  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Johnson, Aisling and Bouchoule, Isabelle},
   year = {2018},
   month = oct,
   volume = {98},
@@ -118,7 +118,7 @@
 
 @article{johnson_long-lived_2017,
   title = {Long-Lived Nonthermal States Realized by Atom Losses in One-Dimensional Quasicondensates},
-  author = {Johnson, A. and Szigeti, S. S. and  <strong>Schemmer</strong>,  M. and Bouchoule, I.},
+  author = {Johnson, Aisling and Szigeti, Stuart and  <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle},
   year = {2017},
   month = jul,
   volume = {96},
@@ -131,7 +131,7 @@
 
 @article{schemmer_monte_2017,
   title = {Monte {{Carlo}} Wave-Function Description of Losses in a One-Dimensional {{Bose}} Gas and Cooling to the Ground State by Quantum Feedback},
-  author = { <strong>Schemmer</strong>,  M. and Johnson, A. and Photopoulos, R. and Bouchoule, I.},
+  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Johnson, Aisling and Photopoulos, Raphaël and Bouchoule, Isabelle},
   year = {2017},
   month = apr,
   volume = {95},
@@ -142,7 +142,7 @@
 
 @article{lu_geometrical_2016,
   title = {Geometrical {{Pumping}} with a {{Bose}}-{{Einstein Condensate}}},
-  author = {Lu, H.-I and  <strong>Schemmer</strong>,  M. and Aycock, L. M. and Genkina, D. and Sugawa, S. and Spielman, I. B.},
+  author = {Lu, Hsin-I and  <strong>Schemmer</strong>,  <strong>Max></strong> and Aycock, Lauren <strong>Max></strong> and Genkina, Dina and Sugawa, Seiji and Spielman, Ian},
   year = {2016},
   month = may,
   volume = {116},
@@ -155,7 +155,7 @@
 @article{hettrichAtmosphericDragOccultation2015,
   title = {Atmospheric {{Drag}}, {{Occultation}} `{{N}}' {{Ionospheric Scintillation}} ({{ADONIS}}) Mission Proposal: {{Alpbach Summer School}} 2013 {{Team Orange}}},
   shorttitle = {Atmospheric {{Drag}}, {{Occultation}} `{{N}}' {{Ionospheric Scintillation}} ({{ADONIS}}) Mission Proposal},
-  author = {Hettrich, Sebastian and Kempf, Yann and Perakis, Nikolaos and G{\'o}rski, J{\k{e}}drzej and Edl, Martina and Urb{\'a}{\v r}, Jaroslav and D{\'o}sa, Melinda and Gini, Francesco and Roberts, Owen W. and Schindler, Stefan and  <strong>Schemmer</strong>,  \textbf{Maximilian} and Steenari, David and Jold{\v z}i{\'c}, Nina and Glesnes {\O}degaard, Linn-Kristine and Sarria, David and Volwerk, Martin and Praks, Jaan},
+  author = {Hettrich, Sebastian and Kempf, Yann and Perakis, Nikolaos and Górski, Jedrzej and Edl, Martina and Urbar, Jaroslav and Dosa, Melinda and Gini, Francesco and Roberts, Owen W. and Schindler, Stefan and  <strong>Schemmer</strong>,  <strong>Maximilian</strong> and Steenari, David and Joldzic, Nina and Glesnes Odegaard, Linn-Kristine and Sarria, David and Volwerk, Martin and Praks, Jaan},
   year = {2015},
   volume = {5},
   pages = {A2},
