--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -25,7 +25,7 @@
 
 @misc{kusmierekHigherorderMeanfieldTheory2022,
   title = {Higher-Order Mean-Field Theory of Chiral Waveguide {{QED}}},
-  author = {Kusmierek, Kasper and Mahmoodian, Sahand and Cordier, Martin and Hinney, Jakob and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max></strong> and Schneeweiss, Philipp and Volz, Jürgen and Hammerer, Klemens},
+  author = {Kusmierek, Kasper and Mahmoodian, Sahand and Cordier, Martin and Hinney, Jakob and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max</strong> and Schneeweiss, Philipp and Volz, Jürgen and Hammerer, Klemens},
   year = {2022},
   month = jul,
   number = {arXiv:2207.10439},
