--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -12,7 +12,7 @@
 
 @misc{cordierTailoringPhotonStatistics2022a,
   title = {Tailoring Photon Statistics with an Atom-Based Two-Photon Interferometer},
-  author = {Cordier, Martin and <strong>Schemmer</strong>, <strong>Max></strong> and Schneeweiss, Philipp and Volz, Jürgen and Rauschenbeutel, Arno},
+  author = {Cordier, Martin and <strong>Schemmer</strong>, <strong>Max</strong> and Schneeweiss, Philipp and Volz, Jürgen and Rauschenbeutel, Arno},
   year = {2022},
   month = dec,
   number = {arXiv:2212.09592},
@@ -37,7 +37,7 @@
 
 @misc{mastersWillSingleTwolevel2022,
   title = {Will a Single Two-Level Atom Simultaneously Scatter Two Photons?},
-  author = {Masters, Luke and Hu, Xinxin and Cordier, Martin and Maron, Gabriele and Pache, Lucas and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max></strong> and Volz, Jürgen},
+  author = {Masters, Luke and Hu, Xinxin and Cordier, Martin and Maron, Gabriele and Pache, Lucas and Rauschenbeutel, Arno and <strong>Schemmer</strong>, <strong>Max</strong> and Volz, Jürgen},
   year = {2022},
   month = sep,
   number = {arXiv:2209.02547},
@@ -76,7 +76,7 @@
 
 @article{schemmer_generalized_2019,
   title = {Generalized {{Hydrodynamics}} on an {{Atom Chip}}},
-  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle and Doyon, Benjamin and Dubail, Jérôme},
+  author = { <strong>Schemmer</strong>,  <strong>Max</strong> and Bouchoule, Isabelle and Doyon, Benjamin and Dubail, Jérôme},
   year = {2019},
   month = {mar},
   volume = {122},
@@ -91,7 +91,7 @@
 
 @article{schemmer_cooling_2018,
   title = {Cooling a {{Bose Gas}} by {{Three}}-{{Body Losses}}},
-  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle},
+  author = { <strong>Schemmer</strong>,  <strong>Max</strong> and Bouchoule, Isabelle},
   year = {2018},
   month = nov,
   volume = {121},
@@ -105,7 +105,7 @@
 
 @article{schemmer_monitoring_2018,
   title = {Monitoring Squeezed Collective Modes of a One-Dimensional {{Bose}} Gas after an Interaction Quench Using Density-Ripple Analysis},
-  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Johnson, Aisling and Bouchoule, Isabelle},
+  author = { <strong>Schemmer</strong>,  <strong>Max</strong> and Johnson, Aisling and Bouchoule, Isabelle},
   year = {2018},
   month = oct,
   volume = {98},
@@ -131,7 +131,7 @@
 
 @article{schemmer_monte_2017,
   title = {Monte {{Carlo}} Wave-Function Description of Losses in a One-Dimensional {{Bose}} Gas and Cooling to the Ground State by Quantum Feedback},
-  author = { <strong>Schemmer</strong>,  <strong>Max></strong> and Johnson, Aisling and Photopoulos, Raphaël and Bouchoule, Isabelle},
+  author = { <strong>Schemmer</strong>,  <strong>Max</strong> and Johnson, Aisling and Photopoulos, Raphaël and Bouchoule, Isabelle},
   year = {2017},
   month = apr,
   volume = {95},
@@ -142,7 +142,7 @@
 
 @article{lu_geometrical_2016,
   title = {Geometrical {{Pumping}} with a {{Bose}}-{{Einstein Condensate}}},
-  author = {Lu, Hsin-I and  <strong>Schemmer</strong>,  <strong>Max></strong> and Aycock, Lauren <strong>Max></strong> and Genkina, Dina and Sugawa, Seiji and Spielman, Ian},
+  author = {Lu, Hsin-I and  <strong>Schemmer</strong>,  <strong>Max</strong> and Aycock, Lauren <strong>Max></strong> and Genkina, Dina and Sugawa, Seiji and Spielman, Ian},
   year = {2016},
   month = may,
   volume = {116},
