--- a/markdown_generator/Pub_Schemmer.bib
+++ b/markdown_generator/Pub_Schemmer.bib
@@ -1,6 +1,6 @@
 @article{hinney_unraveling_2021,
   title = {Unraveling {{Two}}-{{Photon Entanglement}} via the {{Squeezing Spectrum}} of {{Light Traveling}} through {{Nanofiber}}-{{Coupled Atoms}}},
-  author = {Hinney, Jakob and Prasad, Adarsh S. and Mahmoodian, Sahand and Hammerer, Klemens and Rauschenbeutel, Arno and Schneeweiss, Philipp and Volz, Jürgen and <strong>Schemmer</strong>, <strong>Max></strong>},
+  author = {Hinney, Jakob and Prasad, Adarsh S. and Mahmoodian, Sahand and Hammerer, Klemens and Rauschenbeutel, Arno and Schneeweiss, Philipp and Volz, Jürgen and <strong>Schemmer</strong>, <strong>Max</strong>},
   year = {2021},
   month = sep,
   journal = {Physical Review Letters},
@@ -50,7 +50,7 @@
 
 @article{bouchoule_asymptotic_2020,
   title = {Asymptotic Temperature of a Lossy Condensate},
-  author = {Bouchoule, Isabelle and <strong>Schemmer</strong>,  <strong>Max></strong>},
+  author = {Bouchoule, Isabelle and <strong>Schemmer</strong>,  <strong>Max</strong>},
   year = {2020},
   month = apr,
   volume = {8},
@@ -61,7 +61,7 @@
 
 @article{bouchoule_cooling_2018,
   title = {Cooling Phonon Modes of a {{Bose}} Condensate with Uniform Few Body Losses},
-  author = {Bouchoule, Isabelle and  <strong>Schemmer</strong>,  <strong>Max></strong> and Henkel, Carsten},
+  author = {Bouchoule, Isabelle and  <strong>Schemmer</strong>,  <strong>Max</strong> and Henkel, Carsten},
   year = {2018},
   month = nov,
   volume = {5},
@@ -118,7 +118,7 @@
 
 @article{johnson_long-lived_2017,
   title = {Long-Lived Nonthermal States Realized by Atom Losses in One-Dimensional Quasicondensates},
-  author = {Johnson, Aisling and Szigeti, Stuart and  <strong>Schemmer</strong>,  <strong>Max></strong> and Bouchoule, Isabelle},
+  author = {Johnson, Aisling and Szigeti, Stuart and  <strong>Schemmer</strong>,  <strong>Max</strong> and Bouchoule, Isabelle},
   year = {2017},
   month = jul,
   volume = {96},
@@ -142,7 +142,7 @@
 
 @article{lu_geometrical_2016,
   title = {Geometrical {{Pumping}} with a {{Bose}}-{{Einstein Condensate}}},
-  author = {Lu, Hsin-I and  <strong>Schemmer</strong>,  <strong>Max</strong> and Aycock, Lauren <strong>Max></strong> and Genkina, Dina and Sugawa, Seiji and Spielman, Ian},
+  author = {Lu, Hsin-I and  <strong>Schemmer</strong>,  <strong>Max</strong> and Aycock, Lauren <strong>Max</strong> and Genkina, Dina and Sugawa, Seiji and Spielman, Ian},
   year = {2016},
   month = may,
   volume = {116},
